--- a/daydayUp/面试题.md
+++ b/daydayUp/面试题.md
@@ -41,4 +41,6 @@
 
   例子：input事件，按下键盘就会不断触发。如果一次触发就发请求十分浪费资源，实际应用中，需要等到用户输出完整字符后再请求。
 
+  > 节流(throttle)：在规定的单位时间内，只能触发一次函数。如果单位时间内多次触发，只有一次生效。
+
 4.
