--- a/daydayUp/面试题.md
+++ b/daydayUp/面试题.md
@@ -39,8 +39,111 @@
 
   > 防抖(debounce)：在事件被触发n秒后再执行回调，如果在这n秒内又被触发，则重新计时。
 
-  例子：input事件，按下键盘就会不断触发。如果一次触发就发请求十分浪费资源，实际应用中，需要等到用户输出完整字符后再请求。
+  适用场景：
+
+  1. input事件，按下键盘就会不断触发。如果一次触发就发请求十分浪费资源，实际应用中，需要等到用户输出完整字符后再请求。
+  2. 按钮提交场景: 防止多次提交, 只执行最后一次
+  3. scroll事件, 在用户停止滚动一段时间后才触发回调
+  4. window.resize 调整窗口大小 最后调整结束时触发一次
+
+  实现: 生产环境用 lodash.debounce
+
+  ```js
+  const debounce = (fn, delay) => {
+    let timer = null
+    return (args) => {
+      let that = this
+      let _args = args
+      clearTimeout(timer)
+      timer = setTimeout(() => {
+        // 注意传递上下文 和 参数
+        fn.apply(that, _args)
+      }, delay)
+    }
+  }
+
+  // 使用
+  let debounceAjax = debounce(ajax, 500)
+
+  input.addEventListener('keyup', function(e) {
+    debounceAjax(e.target.value)
+  })
+
+  ```
 
   > 节流(throttle)：在规定的单位时间内，只能触发一次函数。如果单位时间内多次触发，只有一次生效。
 
-4.
+  适用场景:
+
+  1. 监听滚动时间, 例 判断是否滑到底部
+
+实现:
+
+```js
+const throttle = (fn, delay) => {
+  let flag = true
+  return (...args) => {
+    if (!flag) return
+    flag = false
+    setTimeout(() => {
+      fn.apply()
+      flag = true
+    }, delay)
+  }
+}
+
+const throttle = (fn, delay) => {
+  let timer = null
+  return (args) => {
+    let that = this
+    let _args = args
+    if (!timer) {
+      timer = setTimeout(() => {
+        fn.apply(that, _args)
+        timer = null
+      }, delay)
+    }
+  }
+}
+```
+
+  总结: 防抖与节流都是防止频繁触发, 但防抖是某段时间内只执行一次, 节流是间隔时间执行.
+
+## 4.JavaScript规定了几种语言类型
+
+7种类型。
+
+1. Undefined
+2. Null
+3. String
+4. Number
+5. Boolean
+6. Object
+7. Symbol (es6新加)
+
+## 5.JavaScript对象的底层数据结构是什么
+
+
+## 6.Symbol类型在实际开发中的应用、可手动实现一个简单的Symbol
+
+
+## 7.JavaScript中的变量在内存中的具体存储形式
+
+
+## 8.基本类型对应的内置对象，以及他们之间的装箱拆箱操作
+
+
+## 9.理解值类型和引用类型
+
+
+## 10.null和undefined的区别
+
+
+## 11.至少可以说出三种判断JavaScript数据类型的方式，以及他们的优缺点，如何准确的判断数组类型
+
+
+## 12.可能发生隐式类型转换的场景以及转换原则，应如何避免或巧妙应用
+
+
+## 13.出现小数精度丢失的原因，JavaScript可以存储的最大数字、最大安全数字，JavaScript处理大数字的方法、避免精度丢失的方法
+
