--- a/各种/移动端的那些坑.md
+++ b/各种/移动端的那些坑.md
@@ -1,6 +1,6 @@
-# 移动端
+# 移动端的那些坑
 
-## ios
+## click在ios上失效
 
 click事件在ios上无效， 元素添加 `cursor:pointer;` 元素为 `display：none;` 时常见
 
@@ -14,3 +14,61 @@ $("html").animate({"scrollTop":top})
 // 当当~ 这样就ok
 $("html,body").animate({"scrollTop":top})
 ```
+
+---
+
+## 软键盘
+
+### 安卓下，调起软键盘会挤压页面高度。
+
+1. 导致一些脱离文档流使用底部定位的元素被顶到软键盘上方。
+2. 软键盘收起后页面不回弹
+
+一开始想法是当 input 失去焦点后，使用 setTimeout 等待软键盘收起后，重新给页面高度赋值。但这样有2个问题，一是点击软键盘上自带的收起按钮时，键盘被收起但input未失去焦点；二是 setTimeout 的延时时长不好确定。
+
+> 监听 window.onresize, 动态获取页面可见区域高度。
+
+```js
+ window.onresize = () => {
+   return (() => {
+     that.screenHeight = document.body.clientHeight
+   })()
+ }
+```
+
+### 软键盘升起后遮住输入框
+
+> input 获得焦点时，页面向下滚动一定量
+
+```js
+inputFocus() {
+   this.$nextTick(() => {
+     setTimeout(() => {
+       window.scrollTo({
+         top: 100,
+         behavior: 'smooth',
+       })
+     }, 500)
+   })
+}
+```
+
+---
+
+## 微信SDK
+
+### 单页应用sdk验证问题
+
+ios上，单页应用，sdk验证接口获取签名没问题，但使用时失效，安卓正常。
+
+原因是微信会验证传入的 url 与当前页面 url 是否一致。猜测ios内单页应用路由使用 replace 跳转时实际路由并不会变，微信拿到的页面 url 是用户第一次点击进入时的 url，导致签名生成正确但无法使用。
+
+> ios记录第一次进入的url，验证时ios使用记录的url 安卓使用当前url
+
+---
+
+## 微信返回栏
+
+页面有历史记录时，微信自动添加返回栏。
+
+> 使用 replace 代替 push。
