--- a/daydayUp/重学前端.md
+++ b/daydayUp/重学前端.md
@@ -72,7 +72,7 @@ Completion Record 表示一个语句执行完之后的结果
 2. value 表示语句的返回值. 如果没有,则是 empty
 3. target 表示语句的目标.通常是一个 Javascript 标签
 
-任何 js 语句都可以加标签, 大部分时候没有任何用处. 但可以与 target 相配合, 跳出多层循环.
+任何 js 语句都可以加标签(label), 大部分时候没有任何用处. 但可以与 target 相配合, 跳出多层循环.
 
 ```js
  outer: while(true) {
