--- a/前端/重学前端.md
+++ b/前端/重学前端.md
@@ -2,13 +2,13 @@
 
 ## JavaScript
 
-### JavaScript执行
+### JavaScript执行机制
 
 #### 宏观任务 与 微观任务
 
 > 宿主发起 -- 宏观任务 (setTimeout 等浏览器API)
 >
-> JavaScript 引擎发起 -- 微观任务 (promise)
+> JavaScript 引擎发起 -- 微观任务 (promise, process.nextTick)
 
 Promise 在队列尾部添加微任务,而 setTimeOut 则会添加另一个宏观任务
 
@@ -59,8 +59,9 @@ this的取值
 
 操作 this 的内置函数
 
-- call apply 第一个参数指定 this 值
-- bind
+- call `fn.call(this, param1, param2, ...)`
+- apply `fn.apply(this, [param1, param2, ...])`
+- bind `fn.bind(this, param1, param2, ...)`
 
 #### 语句执行机制
 
@@ -136,7 +137,7 @@ Completion Record 表示一个语句执行完之后的结果
 
 es6前, 只有脚本. 模块是ES6引入了模块机制后才有的.脚本是由浏览器或 node 环境引入执行, 而模块只能在 js 代码里用 import 引入.
 
-![](https://static001.geekbang.org/resource/image/43/44/43fdb35c0300e73bb19c143431f50a44.jpg)
+![脚本和模块](https://static001.geekbang.org/resource/image/43/44/43fdb35c0300e73bb19c143431f50a44.jpg)
 
 ##### import 声明
 
@@ -267,6 +268,67 @@ new Cls()
       1. 属性: 不允许使用连续的两个中划线开头 这样的是变量. 用 var 获取
       2. 值
 
+### 选择器
+
+#### 属性选择器
+
+1. `[att]`: 检查元素是否具有这个属性, 有既选中
+2. `[att=val]`: 精确匹配
+3. `[att~=vval]`: 多种匹配, val 可以是一个空格分割的序列
+4. `[att|=val]`: 开头匹配, 检查一个元素是否以 val 或是以value- 开头
+5. `[attr^=value]`: 表示带有以 attr 命名的属性，且属性值是以"value"开头的元素。
+6. `[attr$=value]`: 表示带有以 attr 命名的属性，且属性值是以"value"结尾的元素。
+
+有些 html 属性有特殊字符, css 字符串允许用单双引号来规避特殊字符, 也可以用反斜杠转义
+
+#### 伪类选择器
+
+> 以冒号开头, 有普通型和函数型两种
+
+##### 树结构关系伪类
+
+- :root 树的根元素, 一般情况下用 HTML 标签即可选中根元素. 但随着 scoped css 和 [shadow root](###shadow DOM) 等场景出现, 选择器可以针对某一子树来选择
+- :empty 表示没有子节点的元素
+- :nth-child 和 :nth-last-child 函数型伪类
+
+|选择器|效果|
+|---|---|
+|:nth-child(even)|选中偶数节点|
+|:nth-child(4n-1)|选中第3,7,11个|
+|:nth-child(3n+1 of li.important)|选中第1,4,7个 li.important, 这里只有 li.important会被计数|
+
+- :nth-last-child
+- :first-child 和 :last-child
+- :only-child 选中唯一一个子元素
+- of-type 系列, 语法糖,S:nth-of-type(An+B) 是:nth-child(An+B of S)的另一种写法
+
+##### 链接与行为伪类
+
+- :any-link 表示任意链接, a, area, link 标签都可能匹配上
+- :link 表示未访问过的链接, :visited 表示已经访问过的链接
+- :hover
+- :active 表示用户正在激活这个元素, 如按下按钮, 鼠标还未抬起时
+- :focus
+- :target 选中浏览器 URL 的 hash 部分所指示的元素
+
+##### 逻辑伪类
+
+- :not 函数型
+
+##### 其他
+
+- dir, lang 国际化: 用于处理国际化和多语言问题
+- play, pause 音频/视频: 用于区分音视频播放状态
+- current, past, future 时序: 用于配合读屏软件等时序性客户端的伪类
+- nth-col, nth-last-col 表格:用于处理 table 的列
+
+#### 伪元素
+
+- `::first-line`: 元素的第一行(排版后显示的第一行), 必须出现在最内层的块级元素之内
+- `::first-letter`: 元素的第一个字母
+- `::before`: 元素的第一个字母
+- `::after`: 元素的第一个字母
+
 ## HTML
 
 title 与 h1的区分:
@@ -275,13 +337,14 @@ title 与 h1的区分:
 base 标签: 历史遗留标签, 不推荐使用. 作用是给页面上所有的 URL 相对地址一个基础, 最多只有一个
 
 meta 标签: 键值对, 一般由 name 和 content 两个属性来定义.
+
 - application-name 如果页面是 Web application, 用这个标签表示应用名称
 - author 页面作者
 - description 页面描述, 可能被用于搜索引擎
--  generator 生成页面所使用的工具, 主要用于可视化编辑器
--  keywords 关键字, SEO
--  referrer 跳转策略, 安全考量
--  theme-color 页面风格颜色, 并不会影响页面, 但浏览器可能据此调整页面之外的 UI (如窗口边框 或 tab 颜色)
+- generator 生成页面所使用的工具, 主要用于可视化编辑器
+- keywords 关键字, SEO
+- referrer 跳转策略, 安全考量
+- theme-color 页面风格颜色, 并不会影响页面, 但浏览器可能据此调整页面之外的 UI (如窗口边框 或 tab 颜色)
 
 特殊属性:
 
@@ -306,3 +369,38 @@ meta 标签: 键值对, 一般由 name 和 content 两个属性来定义.
 // 移动端适配的页面, 标准 meta
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 ```
+
+### shadow DOM
+
+> 使用Element.attachShadow({mode: 'open/closed'}) 方法来将一个 shadow root 附加到任何一个元素上。
+
+在 video input 元素中常见
+
+![例](https://img12.360buyimg.com/ling/jfs/t1/81507/35/2246/707337/5d08dae9Ebd24720a/9fcb85b72ad33789.png)
+
+### 链接
+
+- link标签: 元信息, 多数时候对页面不起作用.但可以被搜索引擎和一些浏览器插件识别
+- a 标签(anchor)
+- area 标签: 区域型的链接, 支持非矩形热区, shape:(圆形,矩形,多边形). 必须和 img 和 map 标签配合使用
+
+### 替换型元素
+
+凡是替换型元素都是使用 src 来引用文件的, 链接型元素是使用 href 标签
+
+img: `srcset`和`sizes`可以在不同的屏幕大小和特性下, 使用不同的图片源
+
+picture: 使用source标签根据不同屏蔽条件 来为其中的 img 元素指定不同的源
+
+video:
+
+1. 使用source标签指定接入多个视频
+2. track 标签
+    - subtitles 字幕或补充性说明
+    - captions 报幕内容, 可能包含演职员表等信息. 适合听障人士了解音频内容
+    - descriptions 视频描述信息, 适合听障人士了解视频内容
+    - chapters 用于浏览器视频内容
+    - metadata 给代码提供的元信息 对普通用户不可见
+
+iframe: 移动端受限, 无法指定大小.安全问题的重灾区, opener window.name 不推荐使用, 拥有 sandbox 模式和 srcdoc 属性
+
