--- a/各种/常用代码段.md
+++ b/各种/常用代码段.md
@@ -87,6 +87,15 @@ outline: none;
 -webkit-appearance: none;
 ```
 
+### 7. 网格背景
+
+```css
+// 背景图默认repeat
+  background-color: #fef5f9; // 背景色
+  background-image: linear-gradient(#fce6ef 1px, transparent 0), linear-gradient(90deg, #fce6ef 1px, transparent 0); // 横线 & 竖线
+  background-size: 15px 15px; // 背景大小(格子间距)
+```
+
 - - - - -
 
 ## JS
@@ -445,6 +454,20 @@ $(window).scroll(function(){
         }
       }
     }
+```
+
+### 20. 不刷新的情况下修改路由地址
+
+```js
+/**
+ * 设置浏览器url
+ * @params：queryObj（参数对象）
+*/
+function setBrowserUrl(queryObj){
+    // stringify是queryString的一个api，具体可以查看node官网，也可以自己实现
+    var url = `${location.pathname}?${stringify(queryObj)}`
+    history.pushState({url: url}, '', url)
+}
 ```
 
 - - - - -
