--- a/各种/提升辛福度的小技巧.md
+++ b/各种/提升辛福度的小技巧.md
@@ -46,3 +46,16 @@ function createMenu({ title, body, buttonText, cancellable }) {
   // ...
 }
 ```
+
+## 3. 常用空值判断
+
+`!` 即可 不需要用到`!!`
+
+- `!undefined` to true
+- `!null` to true
+- `!+0` to true
+- `!-0` to true
+- `!''` to true
+- `!NaN` to true
+- `!false` to true
+- All other expressions to false
