--- a/各种/移动端的那些坑.md
+++ b/各种/移动端的那些坑.md
@@ -15,11 +15,16 @@ $("html").animate({"scrollTop":top})
 $("html,body").animate({"scrollTop":top})
 ```
 
+## input
+
+当 type 为 number 时, maxlength 不生效
+`<input type="text" pattern="\d*" v-model="params.codeStr" maxlength="4" @input="validateCode" />`
+
 ---
 
 ## 软键盘
 
-### 安卓下，调起软键盘会挤压页面高度。
+### 安卓下，调起软键盘会挤压页面高度
 
 1. 导致一些脱离文档流使用底部定位的元素被顶到软键盘上方。
 2. 软键盘收起后页面不回弹
