--- a/daydayUp/各厂招聘要求.md
+++ b/daydayUp/各厂招聘要求.md
@@ -1,5 +1,77 @@
 # 各厂招聘要求
 
+## 字节跳动
+
+我们希望你有相对扎实的计算机基础，了解基本的数据结构和算法，有一定的编程经验 （重点：不需要刷题）有不错的前端编程基础，了解 JavaScript 常用的一些基本 API，熟悉异步编程的处理思路，熟悉 CSS 基本的一些用法对于 React 全家桶、TypeScript、Node.js 等需要有一个基本的了解，工作中大量用到对于技术有热情，务实，自驱
+
+总之，如果学弟学妹们想加入字节跳动，下面三点非常重要：
+
+1. JS基础非常重要，高级程序设计，你不知道的JS，这两本书必须多看几遍。
+2. 前端工程师的算法虽然要求不高，但刷200道真的不算多。而且不要把局限自己在前端，我的很多同事，都是前端后端一手抓，写Go可以，写JS依然很溜。
+3. 学会写博客分享。当然初期的话，可以自己做好笔记。因为有些概念，你可能懂，但说不清楚，写博客就是最好的整理的办法了。
+
+第一：基础一定要非常非常扎实。举个例子，TCP只知道三次握手四次挥手，肯定是不行的，进一步的。下面是一些本人在牛客网上长期游荡收集的字节跳动面试题，来试试？其实这些东西在大学的计算机网络课程上都有讲述，而且基本都是考试必考的重点，如果觉得答的比较吃力，还是回去重新学一下计算机网络比较好。
+
+1. 三次握手一定能保证建立稳定连接吗？
+2. 知道两军对垒问题吗？
+3. UDP如何模拟TCP？（考察两者区别）
+4. 四次挥手时，接收方为什么要等2MSL再断开连接？
+5. 差错控制，流量控制，拥塞控制？
+
+第二：写代码能力一定要强。算法题就不说了，leetcode上简单、中等难度全刷完绝对没问题。除了算法题之外，还有一些像这样的：
+
+1. 实现个new？
+2. js标准里的EventTarget了解吗？实现一个？
+3. 用Promise的then和catch实现一个Promise.finally？
+4. reduce方法遍历一棵树？
+
+（一共三轮面试，均为视频面试）
+
+1. 自我介绍
+2. 写一个原生的ajax请求
+3. post请求的Content-Type有哪几种
+4. 用Promise封装get与post请求
+5. call，apply的区别与应用
+6. ES6中箭头函数的特点与使用
+7. 手动实现一个优先级队列（详情移步《优先级队列（头条面试题）》）
+8. 请用算法实现，从给定的无序、不重复的数组data中，取出n个数，使其相加和为sum。并给出算法的时间/空间复杂度 (不需要找到所有的解，找到一个解即可)
+9. bind的polyfill实现
+10. 有哪些方法可实现跨域
+11. 验证码实现原理
+12. 用过react与vue做过项目吗
+13. 对虚拟DOM的理解
+
+## 美团
+
+（一共四轮面试，三轮技术面+一轮HR面，现场面试）
+
+1. js的原型链
+2. 实现js中类的继承
+3. 实现广度优先遍历二叉树（LeetCode原题）
+4. 实现Z字型遍历二叉树（详情移步《如此遍历二叉树（美团面试题）》）
+5. 有哪几种方法判断一个变量或对象的类型
+6. 箭头函数中this指向
+7. Promise如何使用
+8. 如何实现Promise，说说你的思路
+9. 实现js对象的深拷贝
+10. 实现三栏布局
+11. html5与css3有了解吗
+12. 浏览器从输入网址到页面展示这个过程中发生了什么
+
+## 百度
+
+1. position的四种定位方式
+2. css中选择器的优先级
+3. 用css实现一个三角形
+4. js的作用域链
+5. 如何用两个栈实现队列给定一个矩阵，依次从外层向内层遍历元素
+6. Cookie与Session的特点
+7. css3中的animation的用法
+8. 当动画结束时，执行一个回调函数，你怎么实现这个需求
+9. tcp协议的三次握手四次挥手
+10. 从一个先升序后降序的数组中找出最大值（详情移步《百度面试题之求数组最大值》）
+11. 一个整型二维数组，特点是从左到右数值依次增大，从上到下数值依次增大，且数组中没有重复元素，现给定一个整数，判断数组中是否包含此整数（LeetCode原题）
+
 ## 英语流利说
 
 主导英语流利说 Hybrid、小程序、运营等功能开发，打造丰富的学习体验
@@ -12,3 +84,52 @@
 对产品设计有自己的思考，对代码实现有高标准的要求
 关注新技术，但能够系统地学习和合理判断对技术的运用
 有技术博客者、个人开源项目者优先
+
+## 阿里 P6
+
+电话面试
+1.说一下你了解CSS盒模型。
+2.说一下box-sizing的应用场景。
+3.说一下你了解的弹性FLEX布局.
+4.说一下一个未知宽高元素怎么上下左右垂直居中。
+5.说一下原型链，对象，构造函数之间的一些联系。
+6.DOM事件的绑定的几种方式
+7.说一下你项目中用到的技术栈，以及觉得得意和出色的点，以及让你头疼的点，怎么解决的。
+8.有没有了解http2.0,websocket,https，说一下你的理解以及你所了解的特性。
+
+技术 一面
+1.webpack的入口文件怎么配置，多个入口怎么分割啥的，我也没太听清楚。
+2.我看到你的项目用到了Babel的一个插件：transform-runtime以及stage-2，你说一下他们的作用。
+3.我看到你的webpack配置用到webpack.optimize.UglifyJsPlugin这个插件，有没有觉得压缩速度很慢，有什么办法提升速度。
+4.简历上看见你了解http协议。说一下200和304的理解和区别
+5.DOM事件中target和currentTarget的区别
+6.说一下你平时怎么解决跨域的。以及后续JSONP的原理和实现以及cors怎么设置。
+7.说一下深拷贝的实现原理。
+8.说一下项目中觉得可以改进的地方以及做的很优秀的地方？
+
+技术 二面
+1.有没有自己写过webpack的loader,他的原理以及啥的，记得也不太清楚。
+2.有没有去研究webpack的一些原理和机制，怎么实现的。
+3.babel把ES6转成ES5或者ES3之类的原理是什么，有没有去研究。
+4.git大型项目的团队合作，以及持续集成啥的。
+5.什么是函数柯里化？以及说一下JS的API有哪些应用到了函数柯里化的实现？
+6.ES6的箭头函数this问题，以及拓展运算符。
+7.JS模块化Commonjs,UMD,CMD规范的了解，以及ES6的模块化跟其他几种的区别，以及出现的意义。
+8.说一下Vue实现双向数据绑定的原理，以及vue.js和react.js异同点，如果让你选框架，你怎么怎么权衡这两个框架，分析一下。
+9.我看你也写博客，说一下草稿的交互细节以及实现原理。
+
+三面
+1.先自我介绍一下，说一下项目的技术栈，以及项目中遇到的一些问题啥的。
+2.一个业务场景，面对产品不断迭代，以及需求的变动该怎么应对，具体技术方案实现。具体业务场景，我就不一一描述，Boss在白板上画了一个大致的模块图，然后做了一些需求描述。然后需求一层一层的改变，然后往下挖，主要是考察应对产品能力，以及对代码的可维护性和可拓展性这些考察，开放性问题，我觉得还考察一些沟通交流方面的能力，因为有些地方面试官故意说得很含糊，反正就是一个综合能力，以及对产品的理解，中间谈到怎么实现，
+也问到了一些具体的点，记得问到的有一下几个。
+① 怎么获取一个元素到视图顶部的距离。
+② getBoundingClientRect获取的top和offsetTop获取的top区别
+③事件委托
+
+1.业务场景：比如说百度的一个服务不想让阿里使用，如果识别到是阿里的请求，然后跳转到404或者拒绝服务之类的？
+2.二分查找的时间复杂度怎么求，是多少
+3.XSS是什么，攻击原理，怎么预防。
+4.线性顺序存储结构和链式存储结构有什么区别？以及优缺点。
+5.分析一下移动端日历，PC端日历以及桌面日历的一些不同和需要注意的地方。
+6.白板写代码，用最简洁的代码实现数组去重。
+7.怎么实现草稿，多终端同步，以及冲突问题？
