--- a/Java/日志.md
+++ b/Java/日志.md
@@ -4,15 +4,15 @@
 
 ### 日志的级别
 
-> 优先级从上往下, 选择了某个级别, 该级别之下的行为不会被打印出来
+> 优先级从上往下, 选择了某个级别, 该级别之下的行为不会被打印出来. * -- 常用
 
-1. OFF
+1. OFF: 关闭所有日志
 2. FATAL
-3. ERROR
-4. WARN
-5. INFO
-6. DEBUG
-7. ALL
+3. ERROR *
+4. WARN *
+5. INFO *
+6. DEBUG *
+7. ALL: 打印所有日志
 
 
 
@@ -36,6 +36,36 @@
 - org.apache.log4j.PatternLayout -- 灵活指定布局模式
 - org.apache.log4j.SimpleLayout -- 包含日志信息的级别和信息字符串
 - org.apache.log4j.TTCCLayout -- 包含日志产生的时间, 线程, 类别等信息
+
+
+
+**Logger**
+
+> 默认所有非根 logger 都会继承根 logger,  level 覆盖, appender 叠加
+
+```java
+// 根日志器
+<root>
+   <level value="$luna_loggingLevel"/>
+   <appender-ref ref="PROJECT"/>
+   <appender-ref ref="EXCEPTION_LOG"/>
+</root>
+  
+// logger 的基本结构
+<logger name="com.alibaba.service.VelocityService">
+  <level value="INFO"/>
+  <appender-ref ref="ConsoleAppenderA"/>
+</logger>
+  
+// 在代码中创建 logger
+Logger logger = Logger.getLogger(VelocityService.class.getName());　
+Logger logger = LogFactory.getLog(VelocityService.class);
+
+// 调用
+logger.[level]('msg')
+```
+
+
 
 
 
