--- a/Java/日志.md
+++ b/Java/日志.md
@@ -89,3 +89,88 @@ log4j 的继任者
 - logback-core
 - logback-classic: log4j 的 改进版, 实现了 [SLF4J API](http://www.slf4j.org/) 所以和其他日志框架可以无缝切换
 - logback-access: 集成了 Servlet (如 Tomcat, Jetty), 可提供HTTP-access的日志接口。
+
+
+
+### configuration
+
+- scan: 是否自动扫描配置文件 默认 true
+- scanPeriod -- scan=true 时生效, 扫描配置文件的时间间隔, 默认 1分钟 (单位: ms)
+- debug -- 是否打印 logback 内部日志信息, 默认 false
+
+常用内部元素
+
+- contextName -- 项目名
+- property -- 属性, 定义变量 `<property name="USER_HOME" value="./log" />` 使用 `${USER_HOME}`
+- 
+
+
+
+### logger
+
+> 用于设置某个包或某个类的日志打印级别, 以及指定 <appender>
+>
+> <root> 是特殊的 logger 元素, 指根 logger, 只有 level 属性
+
+- name -- 指定包名或类名
+- level
+  1. ERROR
+  2. WARN
+  3. INFO
+  4. DEBUG
+  5. TRACE
+- additivity -- 是否向上级 logger 传递打印信息, 默认 true
+
+### appender
+
+- name -- 指定 appender 的名称
+- class -- appender 的输出类型, 前缀 ch.qos.logback.core
+  - ConsoleAppender -- 输出到控制台
+  - FileAppender -- 输出到文件
+  - RollingFileAppender
+
+
+
+**内部元素**
+
+- filter -- ThresholdFilter 阈值过滤 行为过滤 LevelFilter  啊 ? 有啥区别啊 ? 指定了 level 为啥还要过滤 ?
+
+- pattern -- 模式 
+
+  | 变量     | 含义               |
+  | -------- | ------------------ |
+  | %d       | 时间               |
+  | %thread  | 线程名             |
+  | %level   | 行为级别           |
+  | %logger  | logger 名称        |
+  | %method  | 方法名             |
+  | %message | 调用方法的入参消息 |
+  | %file    | 所在文件           |
+  | %line    | 所在行             |
+
+  
+
+```java
+<appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
+  // encoder 表示对参数格式化 layout 同义 但过时
+  <encoder>
+    <pattern></pattern>
+  </encoder>
+</appender>
+  
+// FileAppender
+<appender name="FILE" class="ch.qos.logback.core.FileAppender">
+  	// 文件路径, 可相对可绝对, 不存在会自动创建
+    <file>D:/123.log</file>  
+    // true -- 日志被追加到文件结尾, false -- 清空文件
+    <append>true</append>
+    // true -- 日志会被安全地写入文件, 即使其他 FileAppender 也在向此文件做写入操作, 但效率低 默认 false
+    <prudent>false</prudent>
+    <encoder>  
+        <pattern>%-4relative [%thread] %-5level %logger{35} - %msg%n</pattern>  
+    </encoder>  
+</appender>
+```
+
+
+
