--- a/前端/面试题.md
+++ b/前端/面试题.md
@@ -236,6 +236,8 @@ bigInt 类型在 es10 中被提出, 现在在 Chrome 中已经可以使用
 >
 > 深拷贝: 将一个对象从内存中完整的拷贝一份, 从堆内存中开辟一个新的区域存放新对象, 修改新对象不会影响原对象
 
+浅拷贝: `Object.assign()`, `...`
+
 深拷贝实现:
 
 1. `JSON.parse(JSON.stringify(obj))` 局限: 无法处理 function, 正则, 只有在对象是一个严格的 JSON 对象时可以使用
@@ -337,6 +339,16 @@ cat.print()
 
 处理中文输入: `compositionstart` & `compositioned`
 
+
+
+### 19. js的继承方式有哪些
+
+### 20. js的事件轮训机制有了解吗
+
+### 21. 说说call,apply,bind
+
+
+
 ## CSS
 
 ### 1. CSS 选择器以及他们的优先级
@@ -346,3 +358,12 @@ cat.print()
 类选择器 / 属性选择器 / 伪类选择器 0010
 ID 选择器 0100
 `!important`
+
+
+
+### 2. css兼容性有哪几种处理方案
+
+### 3. css3新属性有哪些
+
+### 4. 怎么理解margin越界的问题
+
