--- a/前端/数据结构与算法之美.md
+++ b/前端/数据结构与算法之美.md
@@ -27,10 +27,10 @@
 | 量级              | 复杂度                        | 解释                 |
 | ----------------- | ----------------------------- | -------------------- |
 | 常量阶            | $O(1)$                        | 常量级, 不存在循环，递归语句. 如果循环的次数是固定的值, 那么也是常量 |
-| 对数阶            | $O(logn)$                     |循环次数受内部变量影响
-| 线性阶            | $O(n)$                        |循环
-| 线性对数阶        | $O(nlogn)$                    |
-| 平方/立方/k次方阶 | $O(n^2)$ 、$O(n^3)$、$O(n^k)$ |循环嵌套
+| 对数阶            | $O(logn)$                     |循环次数受内部变量影响|
+| 线性阶            | $O(n)$                        |循环|
+| 线性对数阶        | $O(nlogn)$                    ||
+| 平方/立方/k次方阶 | $O(n^2)$ 、$O(n^3)$、$O(n^k)$ |循环嵌套|
 | 指数阶            | $O(2^n)$                      | 非多项式阶           |
 | 阶乘阶            | $O(n!)$                       | 非多项式阶           |
 
