--- a/网络/网络协议.md
+++ b/网络/网络协议.md
@@ -25,11 +25,14 @@ MAC 地址(识别不同的计算机)
 IP 地址(识别 TCP/IP 网络中互连的主机和路由器)
 
 **5. 物理层**
+
+
+
 常用的两种传输协议:
 
 1. TCP(传输控制协议)
 
-- 提供高可靠性传输和各种控制功能，丢包时的****重发控制****, 次序乱掉时的****顺序控制****。可靠, 有序, 防重, 不丢失.
+- 提供高可靠性传输和各种控制功能，丢包时的**重发控制**, 次序乱掉时的**顺序控制**。可靠, 有序, 防重, 不丢失.
 
 - 面向连接, 只有在确认通信对端存在时才会发送数据, 只能有两个端点(一对一)
 
